# todo-rs

./: .gitignore  Cargo.toml  README.md
excalidraw/: todo-rs requirements.excalidraw
src/: app.rs  keybinds.rs  main.rs  palette.rs  tui.rs
todo-rs/: 02-05-24.todo  29-04-24.todo  30-04-24.todo  master.todo
