[package]
name = "todo-rs"
version = "1.1.2"
edition = "2021"
description = "A Todo App built in rust that provides daily todo lists, with a master list."
repository = "https://github.com/SoloJessy/todo-rs"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
home = "0.5.9"
lazy_static = "1.4.0"
ratatui = "0.26.2"
thiserror = "1.0.59"
